welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit()){vuBiscuit= true}
                              ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
else {vuBiscuit=false}
               ^