welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit:Boolean = false
for (a <- 1 to 6){avance()}
if (estSurBiscuit()){vuBiscuit= true}
else {vuBiscuit=false}


}
